Fix: Add CORS for frontend domains

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mindrank-monorepo",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
+    "build": "cd logic-frontend-react && npm install && npm run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
